[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doublecast"
version = "0.1.0"
description = "DoubleCast - Context-aware time series forecasting"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "SNOW"}
]
keywords = ["time-series", "forecasting", "transformers", "llm", "chronos"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers==4.51.3",  # Pinned version
    "datasets>=2.0.0",
    "accelerate>=0.20.0",

    "chronos-forecasting>=1.0.0",

    "wandb>=0.15.0",
    "trl>=0.7.0",
    "peft>=0.4.0",
    "bitsandbytes>=0.41.0",

    "safetensors>=0.3.0",
    "einops>=0.6.0",

    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",

    "tqdm>=4.60.0",
    "pyyaml>=6.0",

    "openai>=1.0.0",

    "matplotlib>=3.5.0",

    "nvidia-cuda-runtime-cu12>=12.0.0; platform_system=='Linux'",
    "nvidia-cudnn-cu12>=9.0.0; platform_system=='Linux'",
    "triton>=2.0.0; platform_system=='Linux'",

    "tensorboard>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=25.1.0",
    "ruff>=0.6.1",
    "mypy>=1.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.2.4",
    "ipykernel>=6.29.5",
]

all = [
    "gluonts>=0.14.4",
    "statsmodels>=0.14.2",
    "properscoring>=0.1",

    "seaborn>=0.13.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
doublecast-train = "doublecast.training.train:main"
doublecast-train-bolt = "doublecast.training.train_bolt:main"
doublecast-train-grpo = "doublecast.training.train_grpo:main"
doublecast-train-staged = "doublecast.training.train_staged:main"
doublecast-test = "doublecast.evaluation.test:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["doublecast*"]
exclude = ["tests*", "notebooks*", "scripts*", "*.egg-info"]

[tool.setuptools.package-data]
doublecast = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long
